# cantian-connector-mysql

./: .clang-format  .gitconfig  .gitignore  Distributed DB Storage Solution 3.0.0 Open Source Software Notice.txt  LICENST.txt  README  README.en.md  README.md  release_notes
.gitee/: ISSUE_TEMPLATE.en.md  ISSUE_TEMPLATE.zh-CN.md  PULL_REQUEST_TEMPLATE.en.md  PULL_REQUEST_TEMPLATE.zh-CN.md
mysql-test/: README.md  enableCases-euler.list  enableCases.list  mysql-scripts-meta.patch  mysql-source-code-meta.patch  mysql-test-meta.patch  mysql-test-run-ST.pl  mysql-test-run-meta-single.pl  mysql-test-run-meta.pl  mysql-test-run-single.pl  mysql-test-run.pl
mysql-test/suite/ctc/r/: ctc_auto_increment.result  ctc_bit_analyze.result  ctc_charset_binary.result  ctc_charset_collate.result  ctc_compressed_proxy_conn.result  ctc_cond_pushdown.result  ctc_cond_pushdown_explain.result  ctc_datatype.result  ctc_datatype_blob.result  ctc_datetime_analyze.result  ctc_dc_reuse.result  ctc_dcl.result  ctc_ddl.result  ctc_ddl_cascade.result  ctc_ddl_create_table.result  ctc_ddl_engine.result  ctc_ddl_foreign_key.result  ctc_ddl_func_index.result  ctc_ddl_generated_columns.result  ctc_ddl_max_reclength.result  ctc_ddl_partition.result  ctc_ddl_trigger.result  ctc_ddl_view.result  ctc_decimal_analyze.result  ctc_dml_decimal_table.result  ctc_dml_estimate_rows.result  ctc_dml_ignore.result  ctc_dml_two_table.result  ctc_handler_operation.result  ctc_index_cardinality.result  ctc_index_functions_base.result  ctc_link_and_migr_row.result  ctc_lock_instance.result  ctc_read_only.result  ctc_select_early_return.result  ctc_string_analyze.result
mysql-test/suite/ctc/t/: ctc_bit_analyze.test  ctc_cond_pushdown.test  ctc_cond_pushdown_explain.test  ctc_crud_for_drop_column.test  ctc_datatype.test  ctc_datatype_adapt.test  ctc_datatype_blob.test  ctc_dcl.test  ctc_ddl.test  ctc_ddl_alter_table.test  ctc_ddl_analyze.test  ctc_ddl_auto_inc.test  ctc_ddl_engine.test  ctc_ddl_fault_process.test  ctc_ddl_foreign_key_set_enum.test  ctc_ddl_func_index.test  ctc_ddl_func_proc.test  ctc_ddl_generated_columns.test  ctc_ddl_index.test  ctc_ddl_multi_db.test  ctc_ddl_tablespace.test  ctc_ddl_temporary_table.test  ctc_ddl_trigger.test  ctc_ddl_unsupport_command.test  ctc_decimal_analyze.test  ctc_dml_estimate_rows.test  ctc_dml_ignore.test  ctc_dml_two_table.test  ctc_enum_analyze.test  ctc_handler_operation.test  ctc_index_cardinality.test  ctc_json_value.test  ctc_lcov.test  ctc_link_and_migr_row.test  ctc_locking_read_concurrency_with_nowait_and_skip_locked.test  ctc_partition_update.test  ctc_set_analyze.test  ctc_string_analyze.test
mysql-test/suite/tianchi/r/: ctc_atomic_ddl.result  ctc_bit_analyze.result  ctc_charset.result  ctc_cond_pushdown.result  ctc_create_table.result  ctc_crud_for_drop_column.result  ctc_datatype.result  ctc_datatype_adapt.result  ctc_datetime_analyze.result  ctc_ddl.result  ctc_ddl_alter_table.result  ctc_ddl_analyze.result  ctc_ddl_auto_inc.result  ctc_ddl_character_set.result  ctc_ddl_create_table_check.result  ctc_ddl_default_index.result  ctc_ddl_engine.result  ctc_ddl_foreign_key_set_enum.result  ctc_ddl_func_index.result  ctc_ddl_func_proc.result  ctc_ddl_generated_columns.result  ctc_ddl_index.result  ctc_ddl_multi_db.result  ctc_ddl_temporary_table.result  ctc_ddl_trigger.result  ctc_ddl_unsupport_command.result  ctc_dml_ignore.result  ctc_enum_analyze.result  ctc_index_functions_base.result  ctc_json_value.result  ctc_lcov.result  ctc_locking_read_concurrency_with_nowait_and_skip_locked.result  ctc_partition_update.result  ctc_read_only.result  ctc_set_analyze.result  ctc_string_analyze.result  ctc_update_time.result  ctc_varchar.result
mysql-test/suite/tianchi/t/: ctc_atomic_ddl.test  ctc_auto_increment.test  ctc_bit_analyze.test  ctc_charset.test  ctc_charset_binary.test  ctc_charset_collate.test  ctc_compressed_proxy_conn.test  ctc_cond_pushdown.test  ctc_cond_pushdown_explain.test  ctc_crud_for_drop_column.test  ctc_datatype.test  ctc_datatype_adapt.test  ctc_datatype_blob.test  ctc_datetime_analyze.test  ctc_dc_reuse.test  ctc_dcl.test  ctc_ddl.test  ctc_ddl_alter_table.test  ctc_ddl_analyze.test  ctc_ddl_auto_inc.test  ctc_ddl_cascade.test  ctc_ddl_character_set.test  ctc_ddl_create_table.test  ctc_ddl_create_table_check.test  (+38 more)
scripts/: my.cnf
storage/ctc/: CMakeLists.txt  ctc_cbo.cc  ctc_cbo.h  ctc_ddl_rewriter_plugin.cc  ctc_ddl_util.cc  ctc_ddl_util.h  ctc_error.cc  ctc_error.h  ctc_log.h  ctc_meta_data.cc  ctc_meta_data.h  ctc_mysql_proxy.cc  ctc_proxy_util.cc  ctc_proxy_util.h  ctc_srv.h  ctc_srv_mq_module.cc  ctc_srv_mq_module.h  ctc_srv_mq_stub.cc  ctc_stats.cc  ctc_stats.h  ctc_util.cc  ctc_util.h  datatype_cnvrt_4_index_search.cc  datatype_cnvrt_4_index_search.h  datatype_cnvrtr.cc  datatype_cnvrtr.h  decimal_convert.cc  decimal_convert.h  ha_ctc.cc  ha_ctc.h  ha_ctc_ddl.cc  ha_ctc_ddl.h  ha_ctc_pq.cc  ha_ctc_pq.h  ha_ctcpart.cc  ha_ctcpart.h  mysql_cantian_plugin.cc  mysql_daac_plugin.cc  srv_mq_msg.h
storage/ctc/message_queue/: dsw_list.h  dsw_message.h  dsw_shm.h  dsw_typedef.h
storage/ctc/protobuf/: tc_db.pb-c.c  tc_db.pb-c.h  tc_db.proto
storage/tianchi/: CMakeLists.txt  ctc_meta_data.cc  ctc_meta_data.h  datatype_cnvrt_4_index_search.cc  datatype_cnvrt_4_index_search.h  datatype_cnvrtr.cc  datatype_cnvrtr.h  decimal_convert.cc  decimal_convert.h  ha_tse.cc  ha_tse.h  ha_tse_ddl.cc  ha_tse_ddl.h  ha_tsepart.cc  ha_tsepart.h  mysql_daac_plugin.cc  srv_mq_msg.h  tse_cbo.cc  tse_cbo.h  tse_ddl_rewriter_plugin.cc  tse_ddl_util.cc  tse_ddl_util.h  tse_error.cc  tse_error.h  tse_log.h  tse_mysql_proxy.cc  tse_proxy_util.cc  tse_proxy_util.h  tse_srv.h  tse_srv_mq_module.cc  tse_srv_mq_module.h  tse_srv_mq_stub.cc  tse_stats.cc  tse_stats.h  tse_util.cc  tse_util.h
storage/tianchi/message_queue/: dsw_list.h  dsw_message.h  dsw_shm.h
storage/tianchi/protobuf/: tc_db.pb-c.c  tc_db.pb-c.h  tc_db.proto
storage/tianchi/sql/: extra_defs.h  field_common_properties.h  malloc_allocator.h  map_helpers.h  mem_root_allocator.h  template_utils.h
